# deepgram-transcribe

./: README.md  pyproject.toml  record.py  transcribe.py
src/record/: __main__.py
src/transcribe/: __main__.py
